Change name classes

--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \n",
+    "# Tree of clusters \n",
     "\n",
-    "Basic classes to generate the NodeCluster class\n"
+    "Basic classes to generate a tree clusters structure allowing us to \n"
    ]
   },
   {
@@ -821,7 +821,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.NodeCluster at 0x7f8beb2cc390>"
+       "<__main__.NodeCluster at 0x7f6ff4c4bc90>"
       ]
      },
      "execution_count": 7,
@@ -1128,7 +1128,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "class tree_clusters(object):\n",
+    "class TreeClusters(object):\n",
     "    levels = 0\n",
     "    levels_nodes=[]\n",
     "    root = None\n",
@@ -1209,8 +1209,8 @@
     "                    **kwargs\n",
     "                    ):\n",
     "        \"\"\"\n",
-    "        Populate the tree_cluster structure, populate each node \n",
-    "        inside the tree_clusters using random ranges.\n",
+    "        Populate the TreeCluster structure, populate each node \n",
+    "        inside the TreeClusters using random ranges.\n",
     "        \n",
     "        :param int number_per_cluster: Number of point per cluster (Default= None)\n",
     "        \n",
@@ -1344,7 +1344,7 @@
     "        \"\"\"\n",
     "        # duplicate_node\n",
     "        #### Es necesario duplicar la estructura \n",
-    "        new_tree = tree_clusters()\n",
+    "        new_tree = TreeClusters()\n",
     "        #new_tree.levels = self.levels\n",
     "        verbose = kwargs.get('verbose', False )\n",
     "        # print (kwargs.get('copy_pref', False ))\n",
@@ -1523,7 +1523,7 @@
    "outputs": [],
    "source": [
     "#hide \n",
-    "tree = tree_clusters(3, random_seed= 123)"
+    "tree = TreeClusters(3, random_seed= 123)"
    ]
   },
   {
@@ -1531,14 +1531,16 @@
    "metadata": {},
    "source": [
     "## Methods\n",
-    "The following are the mos important methos inside the `tree_clusters` class"
+    "The following are the mos important methos inside the `TreeClusters` class"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Counstruct tree "
+    "### Counstruct tree \n",
+    "\n",
+    "The tree clustes structure "
    ]
   },
   {
@@ -1549,9 +1551,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.__init__\" class=\"doc_header\"><code>tree_clusters.__init__</code><a href=\"__main__.py#L6\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.__init__\" class=\"doc_header\"><code>TreeClusters.__init__</code><a href=\"__main__.py#L6\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>tree_clusters.__init__</code>(**`levels`**=*`None`*, **`r_name`**=*`'Root'`*, **`level_str`**=*`'l_'`*, **`node_str`**=*`'n_'`*, **\\*\\*`kwargs`**)\n",
+       "> <code>TreeClusters.__init__</code>(**`levels`**=*`None`*, **`r_name`**=*`'Root'`*, **`level_str`**=*`'l_'`*, **`node_str`**=*`'n_'`*, **\\*\\*`kwargs`**)\n",
        "\n",
        "Build the tree \n",
        "\n",
@@ -1574,7 +1576,7 @@
     }
    ],
    "source": [
-    "show_doc(tree_clusters.__init__)"
+    "show_doc(TreeClusters.__init__)"
    ]
   },
   {
@@ -1585,12 +1587,12 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.populate_tree\" class=\"doc_header\"><code>tree_clusters.populate_tree</code><a href=\"__main__.py#L75\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.populate_tree\" class=\"doc_header\"><code>TreeClusters.populate_tree</code><a href=\"__main__.py#L75\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>tree_clusters.populate_tree</code>(**`number_per_cluster`**=*`None`*, **`density_init`**=*`None`*, **`factor_density`**=*`3`*, **`density_init_list`**=*`None`*, **\\*\\*`kwargs`**)\n",
+       "> <code>TreeClusters.populate_tree</code>(**`number_per_cluster`**=*`None`*, **`density_init`**=*`None`*, **`factor_density`**=*`3`*, **`density_init_list`**=*`None`*, **\\*\\*`kwargs`**)\n",
        "\n",
-       "Populate the tree_cluster structure, populate each node \n",
-       "inside the tree_clusters using random ranges.\n",
+       "Populate the TreeCluster structure, populate each node \n",
+       "inside the TreeClusters using random ranges.\n",
        "\n",
        ":param int number_per_cluster: Number of point per cluster (Default= None)\n",
        "\n",
@@ -1609,7 +1611,7 @@
     }
    ],
    "source": [
-    "show_doc(tree_clusters.populate_tree)"
+    "show_doc(TreeClusters.populate_tree)"
    ]
   },
   {
@@ -1627,9 +1629,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.get_deepth\" class=\"doc_header\"><code>tree_clusters.get_deepth</code><a href=\"__main__.py#L243\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.get_deepth\" class=\"doc_header\"><code>TreeClusters.get_deepth</code><a href=\"__main__.py#L243\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>tree_clusters.get_deepth</code>()\n",
+       "> <code>TreeClusters.get_deepth</code>()\n",
        "\n",
        "Returns the deepth of the tree"
       ],
@@ -1642,7 +1644,7 @@
     }
    ],
    "source": [
-    "show_doc(tree_clusters.get_deepth)"
+    "show_doc(TreeClusters.get_deepth)"
    ]
   },
   {
@@ -1653,9 +1655,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.size\" class=\"doc_header\"><code>tree_clusters.size</code><a href=\"__main__.py#L251\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.size\" class=\"doc_header\"><code>TreeClusters.size</code><a href=\"__main__.py#L251\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>tree_clusters.size</code>()\n",
+       "> <code>TreeClusters.size</code>()\n",
        "\n",
        "Returns the number of node in the tree"
       ],
@@ -1668,7 +1670,7 @@
     }
    ],
    "source": [
-    "show_doc(tree_clusters.size)"
+    "show_doc(TreeClusters.size)"
    ]
   },
   {
@@ -1686,9 +1688,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.get_points_tree\" class=\"doc_header\"><code>tree_clusters.get_points_tree</code><a href=\"__main__.py#L121\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.get_points_tree\" class=\"doc_header\"><code>TreeClusters.get_points_tree</code><a href=\"__main__.py#L121\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>tree_clusters.get_points_tree</code>(**`level`**=*`None`*, **`iterative`**=*`False`*)\n",
+       "> <code>TreeClusters.get_points_tree</code>(**`level`**=*`None`*, **`iterative`**=*`False`*)\n",
        "\n",
        "Return all the points in the tree\n",
        "\n",
@@ -1707,7 +1709,7 @@
     }
    ],
    "source": [
-    "show_doc(tree_clusters.get_points_tree)\n"
+    "show_doc(TreeClusters.get_points_tree)\n"
    ]
   },
   {
@@ -1725,9 +1727,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.print_structure\" class=\"doc_header\"><code>tree_clusters.print_structure</code><a href=\"__main__.py#L147\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.print_structure\" class=\"doc_header\"><code>TreeClusters.print_structure</code><a href=\"__main__.py#L147\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>tree_clusters.print_structure</code>()\n",
+       "> <code>TreeClusters.print_structure</code>()\n",
        "\n",
        "Print the tree structure in console"
       ],
@@ -1740,7 +1742,7 @@
     }
    ],
    "source": [
-    "show_doc(tree_clusters.print_structure)"
+    "show_doc(TreeClusters.print_structure)"
    ]
   },
   {
@@ -1751,9 +1753,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.visualize\" class=\"doc_header\"><code>tree_clusters.visualize</code><a href=\"__main__.py#L159\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.visualize\" class=\"doc_header\"><code>TreeClusters.visualize</code><a href=\"__main__.py#L159\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>tree_clusters.visualize</code>(**`axs`**, **`colors_levels`**=*`None`*, **\\*\\*`kwargs`**)\n",
+       "> <code>TreeClusters.visualize</code>(**`axs`**, **`colors_levels`**=*`None`*, **\\*\\*`kwargs`**)\n",
        "\n",
        "Visualize the tree \n",
        "\n",
@@ -1770,7 +1772,7 @@
     }
    ],
    "source": [
-    "show_doc(tree_clusters.visualize)"
+    "show_doc(TreeClusters.visualize)"
    ]
   },
   {
@@ -1781,9 +1783,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.visualize_levels\" class=\"doc_header\"><code>tree_clusters.visualize_levels</code><a href=\"__main__.py#L188\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.visualize_levels\" class=\"doc_header\"><code>TreeClusters.visualize_levels</code><a href=\"__main__.py#L188\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>tree_clusters.visualize_levels</code>(**`axs`**, **\\*\\*`kwargs`**)\n",
+       "> <code>TreeClusters.visualize_levels</code>(**`axs`**, **\\*\\*`kwargs`**)\n",
        "\n"
       ],
       "text/plain": [
@@ -1795,7 +1797,7 @@
     }
    ],
    "source": [
-    "show_doc(tree_clusters.visualize_levels)"
+    "show_doc(TreeClusters.visualize_levels)"
    ]
   },
   {
