--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -27,7 +27,19 @@
    "execution_count": 3,
    "id": "4363959e-b31e-4325-9f9f-8d60ccbc4ee0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'TreeClusters' from 'HierarchicalGeoClustering.TreeClusters' (/Partition1/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3162654/3388261661.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mmodule_path\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodule_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mHierarchicalGeoClustering\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTreeClusters\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTreeClusters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'TreeClusters' from 'HierarchicalGeoClustering.TreeClusters' (/Partition1/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py)"
+     ]
+    }
+   ],
    "source": [
     "#export\n",
     "import os\n",
@@ -35,7 +47,7 @@
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from HierarchicalGeoClustering.TreeClusters import tree_clusters"
+    "from HierarchicalGeoClustering.TreeClusters import TreeClusters"
    ]
   },
   {
@@ -52,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3fadca08-8cee-4a27-9be1-ae519358afe0",
    "metadata": {},
    "outputs": [],
@@ -180,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e0b7a559-9d82-4dcc-bd65-0719025bbaba",
    "metadata": {},
    "outputs": [],
@@ -191,43 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2ceb807e-6bd7-47f7-904d-ba6448872f16",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "<h4 id=\"clustering\" class=\"doc_header\"><code>clustering</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
-       "\n",
-       "> <code>clustering</code>(**`t_next_level_2`**, **`level`**=*`None`*, **`algorithm`**=*`'dbscan'`*, **\\*\\*`kwargs`**)\n",
-       "\n",
-       "Function to get the clusters for single group by\n",
-       "\n",
-       ":param t_next_level_2 Dictionary with the points to compute the\n",
-       "        cluster\n",
-       ":param level:  None Level to compute (Default None)\n",
-       "\n",
-       ":param str algorithm : Algorithm type is supported (Default= 'dbscan')\n",
-       "\n",
-       ":param int min_points_cluster:  minimun number of point to consider a cluster(Default 50)\n",
-       "\n",
-       ":param double eps: Epsilon parameter In case is needed\n",
-       "\n",
-       ":param bool return_noise: To return the noise (Default False)\n",
-       "\n",
-       ":param bool verbose: Printing (Dafault False)  \n",
-       "\n",
-       ":returns list t_next_level_n: A list with dictionaries with the points, the parent, and nois "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "show_doc(clustering)"
    ]
@@ -243,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7fadc0e6-da7b-4d25-9099-d45d05659d46",
    "metadata": {},
    "outputs": [],
@@ -330,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "372eacfa-9a9f-4485-bcfb-95710f57cf84",
    "metadata": {},
    "outputs": [],
@@ -341,46 +320,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f5e05b61-f672-4d5f-b085-439d0694490d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "<h4 id=\"recursive_clustering\" class=\"doc_header\"><code>recursive_clustering</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
-       "\n",
-       "> <code>recursive_clustering</code>(**`this_level`**, **`to_process`**, **`cluster_tree`**, **`level`**=*`0`*, **`algorithm`**=*`'dbscan'`*, **\\*\\*`kwargs`**)\n",
-       "\n",
-       "Performs the recursive clustering.\n",
-       "Calls compute_dbscan for each\n",
-       "list of clusters keepen the structure and then calls itself\n",
-       "until no more clusters satisfy the condition\n",
-       "    \n",
-       ":param dict this_level: level is the current level \n",
-       "\n",
-       ":param int to_process: the max level to process\n",
-       "\n",
-       ":param double eps: The epsilon parameter distance to pass to the needed algorithm \n",
-       "\n",
-       ":param list cluster_tree : list of list to insert the levels \n",
-       "\n",
-       ":param bool verbose : To print \n",
-       "\n",
-       ":param double decay: In the use of dbscan the deacy parameter to reduce eps\n",
-       "\n",
-       ":param int min_points_cluster: The min point for each cluster to pass to algorithm\n",
-       "\n",
-       ":param str algorithm:  The string of the algorithm name to use"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "show_doc(recursive_clustering)"
    ]
@@ -396,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3646c9cf-05c5-4d02-a3db-030b3834ba66",
    "metadata": {},
    "outputs": [],
@@ -452,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "aa88e40b-6f7a-480a-a346-25146d817c38",
    "metadata": {},
    "outputs": [],
@@ -463,38 +406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b71a439b-dcb8-45da-9e27-aa9374dca393",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "<h4 id=\"compute_dbscan\" class=\"doc_header\"><code>compute_dbscan</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
-       "\n",
-       "> <code>compute_dbscan</code>(**`cluster`**, **\\*\\*`kwargs`**)\n",
-       "\n",
-       "Sklearn DBSCAN wrapper.\n",
-       "\n",
-       ":param cluster: a (N,2) numpy array containing the obsevations\n",
-       "\n",
-       ":returns list with numpy arrays for all the clusters obtained"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "show_doc(compute_dbscan)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "d1e2e2cc-3ead-46df-913d-81b233979560",
    "metadata": {},
    "outputs": [],
@@ -626,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "408c167d-92a4-4220-9c06-14e536b6dd32",
    "metadata": {},
    "outputs": [],
@@ -682,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "1799aca1-c7a2-48aa-8e1e-bc0d037bcaf4",
    "metadata": {},
    "outputs": [],
@@ -741,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f8e9777d-c78a-446d-ac64-971ac2acdea4",
    "metadata": {},
    "outputs": [],
