--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from HierarchicalGeoClustering.Node_cluster import *"
+    "from HierarchicalGeoClustering.TreeClusters import *"
    ]
   },
   {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "2"
       ]
      },
-     "execution_count": null,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
