Documentation and chenge names

--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
     "                self.center = random_point_center\n",
     "            else:\n",
     "                ### Se tiene que modificar\n",
-    "                self.polygon_cluster, self.center = self.parent.polygon_not_in_children(random_state= random_state)\n",
+    "                self.polygon_cluster, self.center = self.parent.polygon_not_intersec_children(random_state= random_state)\n",
     "                \n",
     "\n",
     "        ############### The points\n",
@@ -554,6 +554,15 @@
     "\n",
     "    ######Check point for children\n",
     "    def check_point_children(self, Points_tocheck):\n",
+    "        \"\"\"\n",
+    "        Check if the points belong to tis children\n",
+    "        \n",
+    "        :param list Points_tocheck: A list of points to check \n",
+    "        if they belong to it children\n",
+    "        \n",
+    "        :returns list: List of points that are contained in the \n",
+    "        children polygons \n",
+    "        \"\"\"\n",
     "        point_chek_bool=[]\n",
     "        for child in self.children:\n",
     "\n",
@@ -565,6 +574,37 @@
     "\n",
     "    ########## viewer\n",
     "    def viewer_cluster(self, ax,  **kwargs):\n",
+    "        \"\"\"\n",
+    "        Vizualization of the cluster \n",
+    "        \n",
+    "        :param ax: ax of a matplotlib figure\n",
+    "        \n",
+    "        :param int level: Level to view 0 only the points of the cluster,\n",
+    "        1 the children points, -1 all decendent points  (Default = 0 )\n",
+    "        \n",
+    "        :param bool polygon: To draw the polygon of the cluster \n",
+    "        (Default = False).\n",
+    "        \n",
+    "        :param bool polygon_children: Draw the poligon of its children \n",
+    "        (Default = False).\n",
+    "        \n",
+    "        :param double size_cluster: Point size inside the cluster (noise)\n",
+    "        (Default = 2)\n",
+    "        \n",
+    "        :param str color_cluster : matplotlib color \n",
+    "        \n",
+    "        :param double alpha_cluster : alpha channel (Default = 0.5) \n",
+    "        \n",
+    "        :param double size_children : Point size children (Default = 1)\n",
+    "        \n",
+    "        :param str color_children: matplotlib color\n",
+    "        \n",
+    "        :param double alpha_children : alpha channel (Default = 0.5) \n",
+    "        \n",
+    "        :param bool polygon_color_children: Plot the children polygon \n",
+    "        \n",
+    "        :returns : Draw into the ax.\n",
+    "        \"\"\"\n",
     "        level_view = kwargs.get('level', 0 )\n",
     "        polygon_con= kwargs.get('polygon', False)\n",
     "        poligon_children = kwargs.get('polygon_children', False)\n",
@@ -573,7 +613,7 @@
     "            x_points_cluster =[j.x for j in cluster_points  ]\n",
     "            y_points_cluster =[j.y for j in cluster_points  ]\n",
     "            ax.scatter(x_points_cluster,y_points_cluster,\n",
-    "                    s = kwargs.get('size_cluster', 1),\n",
+    "                    s = kwargs.get('size_cluster', 2),\n",
     "                    color = kwargs.get('color_cluster', 'orange'), \n",
     "                    alpha = kwargs.get('alpha_cluster', .5)\n",
     "                    )\n",
@@ -739,15 +779,22 @@
     "            \n",
     "        return new_cluster\n",
     "    ##########Get polygon no toching with others\n",
-    "    def polygon_not_in_children(self, **kwargs):\n",
+    "    def polygon_not_intersec_children(self, **kwargs):\n",
     "\n",
     "        \"\"\"\n",
-    "        El nodo que se pasa como parametro debe ser el padre del poligono que se pide\n",
-    "        y el poligon estara contenido dentro del pologon del nodo que esta como parametro\n",
+    "        Returns a polygon that doesn't touch the any of children polygon's and \n",
+    "        it is inside the cluter's polygon \n",
     "        \n",
-    "        random_state\n",
     "        \n",
-    "        from_points_num\n",
+    "        :param int random_state: (Default= 123456)\n",
+    "        \n",
+    "        :param int from_points_num: (Default= 20)\n",
+    "        \n",
+    "        :param double max_scale_x: (Default= 0.5)\n",
+    "        \n",
+    "        :param double max_scale_y: (Default= 0.5)\n",
+    "        \n",
+    "        :returns tuple: Polygon, random points center  \n",
     "        \"\"\"\n",
     "        random_state=kwargs.get('random_state', 123456)\n",
     "        from_points_num= kwargs.get('from_points_num', 20)\n",
@@ -840,14 +887,16 @@
    "source": [
     "### Methods (NodeCluster)\n",
     "\n",
-    "In the following section the mos important methos of the NodeCluster class are review "
+    "In the following section the documentation of most important methods of the NodeCluster class are shown "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create the cluster and populate\n"
+    "#### Create cluster \n",
+    "\n",
+    "The following methos are par of the construction of the `NodeCluster` and some utilities that arte use in its construction. \n"
    ]
   },
   {
@@ -921,14 +970,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### create polygon\n",
-    "Create a random polygon of the cluster node"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -998,6 +1039,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"NodeCluster.polygon_not_intersec_children\" class=\"doc_header\"><code>NodeCluster.polygon_not_intersec_children</code><a href=\"__main__.py#L685\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>NodeCluster.polygon_not_intersec_children</code>(**\\*\\*`kwargs`**)\n",
+       "\n",
+       "Returns a polygon that doesn't touch the any of children polyon's and \n",
+       "it is inside the cluter's polygon \n",
+       "\n",
+       "\n",
+       ":param int random_state: (Default= 123456)\n",
+       "\n",
+       ":param int from_points_num: (Default= 20)\n",
+       "\n",
+       ":param double max_scale_x: (Default= 0.5)\n",
+       "\n",
+       ":param double max_scale_y: (Default= 0.5)\n",
+       "\n",
+       ":returns tuple: Polygon, random points center  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(NodeCluster.polygon_not_intersec_children)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1043,9 +1122,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Get density\n",
-    "\n",
-    "Number of point in the cluster/Area of the polygon cluster"
+    "#### Get values \n",
+    "Exctrac values from the `NodeCluster` class"
    ]
   },
   {
@@ -1111,12 +1189,156 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"NodeCluster.get_center\" class=\"doc_header\"><code>NodeCluster.get_center</code><a href=\"__main__.py#L274\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>NodeCluster.get_center</code>()\n",
+       "\n",
+       "Get the center of the bounding box poligon\n",
+       "\n",
+       ":returns: Shapely Point center "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(NodeCluster.get_center)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"NodeCluster.get_points\" class=\"doc_header\"><code>NodeCluster.get_points</code><a href=\"__main__.py#L297\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>NodeCluster.get_points</code>(**`all_tag`**=*`False`*)\n",
+       "\n",
+       "Returns the noise point of the cluster, if all_tag is set true returns  \n",
+       "all the points of the its decendents"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(NodeCluster.get_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"NodeCluster.get_point_decendent\" class=\"doc_header\"><code>NodeCluster.get_point_decendent</code><a href=\"__main__.py#L316\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>NodeCluster.get_point_decendent</code>()\n",
+       "\n",
+       "Returns all the point of the node and its decendents"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(NodeCluster.get_point_decendent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Vizualization \n",
+    "\n",
+    "Tools to visualize the cluster and its points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"NodeCluster.viewer_cluster\" class=\"doc_header\"><code>NodeCluster.viewer_cluster</code><a href=\"__main__.py#L479\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>NodeCluster.viewer_cluster</code>(**`ax`**, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "Vizualization of the cluster \n",
+       "\n",
+       ":param ax: ax of a matplotlib figure\n",
+       "\n",
+       ":param int level: Level to view 0 only the points of the cluster,\n",
+       "1 the children points, -1 all decendent points  (Default = 0 )\n",
+       "\n",
+       ":param bool polygon: To draw the polygon of the cluster \n",
+       "(Default = False).\n",
+       "\n",
+       ":param bool polygon_children: Draw the poligon of its children \n",
+       "(Default = False).\n",
+       "\n",
+       ":param double size_cluster: Point size inside the cluster (noise)\n",
+       "(Default = 2)\n",
+       "\n",
+       ":param str color_cluster : matplotlib color \n",
+       "\n",
+       ":param double alpha_cluster : alpha channel (Default = 0.5) \n",
+       "\n",
+       ":param double size_children : Point size children (Default = 1)\n",
+       "\n",
+       ":param str color_children: matplotlib color\n",
+       "\n",
+       ":param double alpha_children : alpha channel (Default = 0.5) \n",
+       "\n",
+       ":param bool polygon_color_children: Plot the children polygon \n",
+       "\n",
+       ":returns : Draw into the ax."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(NodeCluster.viewer_cluster)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "# Tree Cluster class \n",
+    "## Tree Cluster class \n",
     "\n",
     "The class for a hierarchical structure (clusters tree) that allows to visualize and create random hierargical geographical points"
    ]
